<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".WinnerActivity">

    <TextView
        android:id="@+id/winningTextView"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="pointDifference"
        android:text="@string/winningTextView"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="winner" />

    <ImageView
        android:id="@+id/winningPicture"
        android:layout_width="342dp"
        android:layout_height="405dp"
        android:layout_marginTop="125dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="resultMain"
        android:text="@string/winningPicture"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="OnClick"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="118dp"
        android:onClick="phoneAFriend"
        android:text="@string/phoneAFriend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winningPicture"
        tools:text="Call" />

    <Button
        android:id="@+id/OpenMaps"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="53dp"
        android:onClick="openMaps"
        android:text="@string/maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Maps" />

    <Button
        android:id="@+id/sendAMessageButton"
        android:layout_width="105dp"
        android:layout_height="42dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="53dp"
        android:onClick="sendAMessage"
        android:text="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Message" />
</androidx.constraintlayout.widget.ConstraintLayout>